<resources>
    <string name="app_name">Proyecto</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_userName">Nombre de Usuario</string>
    <string name="bt_LogIn">LogIn</string>
    <string name="bt_Registro">Crear una</string>
    <string name="bt_Reset">Restablecer contrasena</string>
    <string name="bt_Contrasena">Olvidaste la contrasena</string>
    <string name="bt_CrearUsuario">Crear</string>
    <string name="Tv_msgRegistro"> No tienes cuenta aun?</string>
    <color name="green">#0F9D58</color>
    <string name="tv_clave">Contrasena</string>
    <string name="msg_fallo_registro">Fallo la creacion del usuario</string>
    <string name="msg_fallo_login">Fallo la autenticacion del usuario</string>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_home">Home</string>
</resources>