<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28ca5d"
    android:orientation="vertical"
    android:paddingTop="75dp"
    tools:context="MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        app:srcCompat="@drawable/ic_imagen_credit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_correo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_clave"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:insetLeft="150dp"
            android:insetRight="150dp"
            android:text="@string/bt_LogIn"
            android:textAlignment="center"
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/btContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/bt_Contrasena"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="No tienes cuenta aun? "
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/bt_Registro"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/secondary_text_light" />

</LinearLayout>