<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28ca5d"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context="RegistrarUsuario">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="Nueva Cuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/tv_nombre"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/tv_correo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/tv_userName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/tv_clave"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_clave"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btCrearUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="#FFFFFF"
        android:insetLeft="150dp"
        android:insetRight="150dp"
        android:text="@string/bt_CrearUsuario"
        android:textAllCaps="false"
        android:textColor="#000000" />

</LinearLayout>